default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>