default/objects/Contact/fields/Account_administrator_security_question__c.field-meta.xml
<CustomField>
    <fullName>Account_administrator_security_question__c</fullName>
    <label>Account administrator security question</label>
    <length>100</length>
    <type>Text</type>
</CustomField>