default/objects/Contact/fields/Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Emails__c</fullName>
    <description>List of additional emails in сyrillic, separator ":"</description>
    <externalId>true</externalId>
    <label>Additional Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>