default/objects/Contact/fields/Additional_Phones__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phones__c</fullName>
    <description>List of additional phones</description>
    <label>Additional Phones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>