default/objects/Contact/fields/AGB_Best_tigung_Ja_Nein_ist_immer_Ja__c.field-meta.xml
<CustomField>
    <fullName>AGB_Best_tigung_Ja_Nein_ist_immer_Ja__c</fullName>
    <label>AGB Bestätigung (Ja/Nein) - ist immer Ja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
                <default>true</default>
                <label>Ja</label>
            </value>
            <value>
                <fullName>Nein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>