default/objects/Contact/fields/AllStar_account_administrator__c.field-meta.xml
<CustomField>
    <fullName>AllStar_account_administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllStar account administrator</label>
    <type>Checkbox</type>
</CustomField>