default/objects/Contact/fields/AllStar_authorised_signatory__c.field-meta.xml
<CustomField>
    <fullName>AllStar_authorised_signatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllStar authorised signatory</label>
    <type>Checkbox</type>
</CustomField>