default/objects/Contact/fields/AllStar_UBO__c.field-meta.xml
<CustomField>
    <fullName>AllStar_UBO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllStar UBO</label>
    <type>Checkbox</type>
</CustomField>