default/objects/Contact/fields/Answer_to_Security_Question__c.field-meta.xml
<CustomField>
    <fullName>Answer_to_Security_Question__c</fullName>
    <label>Answer to Security Question</label>
    <length>50</length>
    <type>Text</type>
</CustomField>