default/objects/Contact/fields/AssistantPhone_Rating__c.field-meta.xml
<CustomField>
    <fullName>AssistantPhone_Rating__c</fullName>
    <description>Rating of AssistantPhone field</description>
    <label>AssistantPhone Rating</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>