default/objects/Contact/fields/AssistantPhone_Status__c.field-meta.xml
<CustomField>
    <fullName>AssistantPhone_Status__c</fullName>
    <description>Status for the "AssistantPhone" field</description>
    <label>Assistant Phone Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PhoneStatus</valueSetName>
    </valueSet>
</CustomField>