default/objects/Contact/fields/AssistantPhone_StatusModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>AssistantPhone_StatusModifiedDate__c</fullName>
    <description>Last Modified Date for AssistantPhone_Status__c field</description>
    <label>Assistant Phone Status Modified Date</label>
    <type>DateTime</type>
</CustomField>