default/objects/Contact/fields/Ausweis_Ausstellende_Beh_rde__c.field-meta.xml
<CustomField>
    <fullName>Ausweis_Ausstellende_Beh_rde__c</fullName>
    <label>Ausweis Ausstellende Behörde</label>
    <length>50</length>
    <type>Text</type>
</CustomField>