default/objects/Contact/fields/Ausweis_Ausstellungsdatum__c.field-meta.xml
<CustomField>
    <fullName>Ausweis_Ausstellungsdatum__c</fullName>
    <label>Ausweis Ausstellungsdatum</label>
    <type>Date</type>
</CustomField>