default/objects/Contact/fields/Ausweisart__c.field-meta.xml
<CustomField>
    <fullName>Ausweisart__c</fullName>
    <label>Ausweisart</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Personalausweis</fullName>
            </value>
            <value>
                <fullName>Reisepass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>