default/objects/Contact/fields/Ausweisnummer__c.field-meta.xml
<CustomField>
    <fullName>Ausweisnummer__c</fullName>
    <label>Ausweisnummer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>