default/objects/Contact/fields/Auth_Person__c.field-meta.xml
<CustomField>
    <fullName>Auth_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auth. Person</label>
    <type>Checkbox</type>
</CustomField>