default/objects/Contact/fields/Authorised_signatory__c.field-meta.xml
<CustomField>
    <fullName>Authorised_signatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorised signatory</label>
    <type>Checkbox</type>
</CustomField>