default/objects/Contact/fields/Bargeldabhebung_Ja_Nein__c.field-meta.xml
<CustomField>
    <fullName>Bargeldabhebung_Ja_Nein__c</fullName>
    <label>Bargeldabhebung (Ja/Nein)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>