default/objects/Contact/fields/Briefanrede__c.field-meta.xml
<CustomField>
    <fullName>Briefanrede__c</fullName>
    <formula>IF(
            ISPICKVAL(Salutation,"Herr"),"Sehr geehrter Herr "&amp; LastName,
            IF(ISPICKVAL(Salutation,"Herr Dr."),"Sehr geehrter Herr Dr. "&amp; LastName,
            IF(ISPICKVAL(Salutation,"Herr Prof."),"Sehr geehrter Herr Prof. "&amp; LastName,
            IF(ISPICKVAL(Salutation,"Frau"),"Sehr geehrte Frau "&amp; LastName,
            IF(ISPICKVAL(Salutation,"Frau Dr."),"Sehr geehrte Frau Dr. "&amp; LastName,
            IF(ISPICKVAL(Salutation,"Frau Prof."),"Sehr geehrte Frau Prof. "&amp; LastName,
            IF(ISPICKVAL(Salutation,"Mr."),"Sehr geehrter Herr "&amp; LastName,
            IF(ISPICKVAL(Salutation,"Mrs."),"Sehr geehrte Frau "&amp; LastName,
            "Sehr geehrter Leser"))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Briefanrede</label>
    <type>Text</type>
</CustomField>