default/objects/Contact/fields/Call_via_3CX_AssistantPhone__c.field-meta.xml
<CustomField>
    <fullName>Call_via_3CX_AssistantPhone__c</fullName>
    <description>Call contact's assistant phone via 3CX</description>
    <formula>HYPERLINK("http://localhost:47280/SalesforceAPI.aspx?UserAccount="&amp; $User.Username &amp;"&amp;Destination="&amp;AssistantPhone&amp;"&amp;ContactId="&amp;Id,"Click here to call this contact with 3CX (AssistantPhone)")</formula>
    <inlineHelpText>Clicking this link will launch a call to this contact's assistant phone and connect it to your phone</inlineHelpText>
    <label>Call assistant phone via 3CX</label>
    <type>Text</type>
</CustomField>