default/objects/Contact/fields/Call_via_3CX_HomePhone__c.field-meta.xml
<CustomField>
    <fullName>Call_via_3CX_HomePhone__c</fullName>
    <description>Call contact's home phone via 3CX</description>
    <formula>HYPERLINK("http://localhost:47280/SalesforceAPI.aspx?UserAccount="&amp; $User.Username &amp;"&amp;Destination="&amp;HomePhone&amp;"&amp;ContactId="&amp;Id,"Click here to call this contact with 3CX (HomePhone)")</formula>
    <inlineHelpText>Clicking this link will launch a call to this contact's home phone and connect it to your phone</inlineHelpText>
    <label>Call home phone via 3CX</label>
    <type>Text</type>
</CustomField>