default/objects/Contact/fields/CCS_Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CCS_Contact_Record_Type__c</fullName>
    <label>CCS Contact Record Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>