default/objects/Contact/fields/CCS_GFN_Contact_type__c.field-meta.xml
<CustomField>
    <fullName>CCS_GFN_Contact_type__c</fullName>
    <label>CCS GFN Contact type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional Contact</fullName>
            </value>
            <value>
                <fullName>Invoice Recipient</fullName>
            </value>
            <value>
                <fullName>Responsible person 2</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>iMonitor contact</fullName>
            </value>
            <value>
                <fullName>CCS Plus</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
            <value>
                <fullName>Card Delivery</fullName>
            </value>
            <value>
                <fullName>Pin Delivery</fullName>
            </value>
            <value>
                <fullName>Debt Contact</fullName>
            </value>
            <value>
                <fullName>Jen v SF</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>