default/objects/Contact/fields/CCS_GFN_number__c.field-meta.xml
<CustomField>
    <fullName>CCS_GFN_number__c</fullName>
    <label>CCS GFN number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>