default/objects/Contact/fields/CCS_Level__c.field-meta.xml
<CustomField>
    <fullName>CCS_Level__c</fullName>
    <label>CCS Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEO/Generální ředitel</fullName>
            </value>
            <value>
                <fullName>Board/Člen představenstva</fullName>
            </value>
            <value>
                <fullName>B-1</fullName>
            </value>
            <value>
                <fullName>B-2</fullName>
            </value>
            <value>
                <fullName>B-3</fullName>
            </value>
            <value>
                <fullName>Člen dozorčí rady</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>