default/objects/Contact/fields/CCS_Other_e_mail__c.field-meta.xml
<CustomField>
    <fullName>CCS_Other_e_mail__c</fullName>
    <label>CCS Other e-mail</label>
    <type>Email</type>
</CustomField>