default/objects/Contact/fields/CCS_Phone_national_prefix__c.field-meta.xml
<CustomField>
    <fullName>CCS_Phone_national_prefix__c</fullName>
    <label>CCS Phone national prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>