default/objects/Contact/fields/CCS_US_instance_ID__c.field-meta.xml
<CustomField>
    <fullName>CCS_US_instance_ID__c</fullName>
    <description>Migration from US instance into WE instance - 2017.</description>
    <externalId>true</externalId>
    <label>CCS US instance ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>