default/objects/Contact/fields/click_to_callContact__c.field-meta.xml
<CustomField>
    <fullName>click_to_callContact__c</fullName>
    <description>this field should be deleted when there is an integration with telephony system for Russia
            *removes '#' and numbers after</description>
    <formula>HYPERLINK("sip:"&amp; IF(CONTAINS(Phone,'#'), LEFT(Phone, FIND('#',Phone,0)-1), Phone)
            , Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>click-to-call</label>
    <type>Text</type>
</CustomField>