default/objects/Contact/fields/clicktocallAssistantPhone__c.field-meta.xml
<CustomField>
    <fullName>clicktocallAssistantPhone__c</fullName>
    <description>this field should be deleted when there is an integration with telephony system for Russia
            *removes '#' and numbers after</description>
    <formula>HYPERLINK("sip:"&amp; IF(CONTAINS(AssistantPhone,'#'), LEFT(AssistantPhone, FIND('#',AssistantPhone,0)-1), AssistantPhone)
            , AssistantPhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>clicktocallAssistantPhone</label>
    <type>Text</type>
</CustomField>