default/objects/Contact/fields/clicktocallHomePhone__c.field-meta.xml
<CustomField>
    <fullName>clicktocallHomePhone__c</fullName>
    <description>this field should be deleted when there is an integration with telephony system for Russia
            *removes '#' and numbers after</description>
    <formula>HYPERLINK("sip:"&amp; IF(CONTAINS(HomePhone,'#'), LEFT(HomePhone, FIND('#',HomePhone,0)-1), HomePhone)
            , HomePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>clicktocallHomePhone</label>
    <type>Text</type>
</CustomField>