default/objects/Contact/fields/clicktocallMobile__c.field-meta.xml
<CustomField>
    <fullName>clicktocallMobile__c</fullName>
    <description>this field should be deleted when there is an integration with telephony system for Russia
            *removes '#' and numbers after</description>
    <formula>HYPERLINK("sip:"&amp; IF(CONTAINS(MobilePhone,'#'), LEFT(MobilePhone, FIND('#',MobilePhone,0)-1), MobilePhone)
            , MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>clicktocallMobile</label>
    <type>Text</type>
</CustomField>