default/objects/Contact/fields/clicktocallOtherPhone__c.field-meta.xml
<CustomField>
    <fullName>clicktocallOtherPhone__c</fullName>
    <description>this field should be deleted when there is an integration with telephony system for Russia
            *removes '#' and numbers after</description>
    <formula>HYPERLINK("sip:"&amp; IF(CONTAINS(OtherPhone,'#'), LEFT(OtherPhone, FIND('#',OtherPhone,0)-1), OtherPhone)
            , OtherPhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>clicktocallOtherPhone</label>
    <type>Text</type>
</CustomField>