default/objects/Contact/fields/clicktocallPPRPhone__c.field-meta.xml
<CustomField>
    <fullName>clicktocallPPRPhone__c</fullName>
    <description>this field should be deleted when there is an integration with telephony system for Russia
            *removes '#' and numbers after</description>
    <formula>HYPERLINK("sip:"&amp; IF(CONTAINS(PPR_Contact_Phone__c,'#'), LEFT(PPR_Contact_Phone__c, FIND('#',PPR_Contact_Phone__c,0)-1), PPR_Contact_Phone__c)
            , PPR_Contact_Phone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>clicktocallPPRPhone</label>
    <type>Text</type>
</CustomField>