default/objects/Contact/fields/Contact_Nr_PPR_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Contact_Nr_PPR_Legacy__c</fullName>
    <label>Contact Nr. Legacy</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>