default/objects/Contact/fields/Contact_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Profile__c</fullName>
    <formula>Owner.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Profile</label>
    <type>Text</type>
</CustomField>