default/objects/Contact/fields/Contact_source__c.field-meta.xml
<CustomField>
    <fullName>Contact_source__c</fullName>
    <description>source contact info</description>
    <label>Contact source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>