default/objects/Contact/fields/ContactMaster_AddressID__c.field-meta.xml
<CustomField>
    <fullName>ContactMaster_AddressID__c</fullName>
    <label>ContactMaster_AddressID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>