default/objects/Contact/fields/ConvertedFromLead__c.field-meta.xml
<CustomField>
    <fullName>ConvertedFromLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if Contact was converted from lead</description>
    <label>Converted From Lead</label>
    <type>Checkbox</type>
</CustomField>