default/objects/Contact/fields/Country_Text__c.field-meta.xml
<CustomField>
    <fullName>Country_Text__c</fullName>
    <label>Country (Text)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>