default/objects/Contact/fields/Customer_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_IP_Address__c</fullName>
    <description>Field used for storing IP adresses of users coming through website (Web-to-Lead, web orders). GDPR Regulation.</description>
    <label>Customer IP Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>