default/objects/Contact/fields/E2E__c.field-meta.xml
<CustomField>
    <fullName>E2E__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E2E</label>
    <type>Checkbox</type>
</CustomField>