default/objects/Contact/fields/Edit_Personal_Data__c.field-meta.xml
<CustomField>
    <fullName>Edit_Personal_Data__c</fullName>
    <formula>HYPERLINK("/apex/PD_Contact?id="&amp;Id&amp;"&amp;accountid="&amp;Account.Id, "Ред. перс. данные")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit Personal Data</label>
    <type>Text</type>
</CustomField>