default/objects/Contact/fields/Email_Salutation_DE__c.field-meta.xml
<CustomField>
    <fullName>Email_Salutation_DE__c</fullName>
    <formula>if(ISPICKVAL(Salutation,"Herr"), "geehrter Herr", 
if(ISPICKVAL(Salutation,"Heer"), "geehrter Herr", 
if(ISPICKVAL(Salutation,"Frau"), "geehrte Frau", 
if(ISPICKVAL(Salutation,"Frau Dr."), "geehrte Frau Dr.", 
if(ISPICKVAL(Salutation,"Herr Dr."), "geehrter Herr Dr.", 
if(ISPICKVAL(Salutation,"Herr Prof."), "geehrter Herr Prof.", 
if(ISPICKVAL(Salutation,"Frau Prof."), "geehrte Frau Prof.",
"")))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Salutation DE</label>
    <type>Text</type>
</CustomField>