default/objects/Contact/fields/Email_Salutation_IT__c.field-meta.xml
<CustomField>
    <fullName>Email_Salutation_IT__c</fullName>
    <formula>if(ISPICKVAL(Salutation,&quot;Herr&quot;), &quot;Gentile Sig.&quot;, 
if(ISPICKVAL(Salutation,&quot;Herr&quot;), &quot;Gentile Sig.&quot;, 
if(ISPICKVAL(Salutation,&quot;Frau&quot;), &quot;Gentile Sig.ra&quot;, 
if(ISPICKVAL(Salutation,&quot;Frau Dr.&quot;), &quot;geehrte Frau Dr.&quot;, 
if(ISPICKVAL(Salutation,&quot;Herr Dr.&quot;), &quot;geehrter Herr Dr.&quot;, 
if(ISPICKVAL(Salutation,&quot;Herr Prof.&quot;), &quot;geehrter Herr Prof.&quot;, 
if(ISPICKVAL(Salutation,&quot;Frau Prof.&quot;), &quot;geehrte Frau Prof.&quot;, 
&quot;&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Salutation IT</label>
    <type>Text</type>
</CustomField>