default/objects/Contact/fields/Email_Second__c.field-meta.xml
<CustomField>
    <fullName>Email_Second__c</fullName>
    <label>Email Second</label>
    <type>Email</type>
</CustomField>