default/objects/Contact/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GFN</label>
    <referenceTo>ERP__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>