default/objects/Contact/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Phone extension</description>
    <inlineHelpText>Phone extension</inlineHelpText>
    <label>Extension</label>
    <length>9</length>
    <type>Text</type>
</CustomField>