default/objects/Contact/fields/Formatted_phones_additional__c.field-meta.xml
<CustomField>
    <fullName>Formatted_phones_additional__c</fullName>
    <label>Formatted phones additional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>