default/objects/Contact/fields/Geburtsort__c.field-meta.xml
<CustomField>
    <fullName>Geburtsort__c</fullName>
    <label>Geburtsort</label>
    <length>50</length>
    <type>Text</type>
</CustomField>