default/objects/Contact/fields/GFN_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>GFN_Contact_ID__c</fullName>
    <description>for import contacts from GFN</description>
    <externalId>true</externalId>
    <label>GFN Contact ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>