default/objects/Contact/fields/HomePhone_Rating__c.field-meta.xml
<CustomField>
    <fullName>HomePhone_Rating__c</fullName>
    <description>Rating of HomePhone field</description>
    <label>HomePhone Rating</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>