default/objects/Contact/fields/HomePhone_Status__c.field-meta.xml
<CustomField>
    <fullName>HomePhone_Status__c</fullName>
    <description>Status for the "HomePhone" field</description>
    <label>Home Phone Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PhoneStatus</valueSetName>
    </valueSet>
</CustomField>