default/objects/Contact/fields/HomePhone_StatusModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>HomePhone_StatusModifiedDate__c</fullName>
    <description>Last Modified Date for HomePhone_Status__c field</description>
    <label>Home Phone Status Modified Date</label>
    <type>DateTime</type>
</CustomField>