default/objects/Contact/fields/id_Contact_is_not_case_sensitive__c.field-meta.xml
<CustomField>
    <fullName>id_Contact_is_not_case_sensitive__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>id Contact is not case sensitive</label>
    <type>Text</type>
</CustomField>