default/objects/Contact/fields/Interested_customer__c.field-meta.xml
<CustomField>
    <fullName>Interested_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested customer</label>
    <type>Checkbox</type>
</CustomField>