default/objects/Contact/fields/Karteninhaber__c.field-meta.xml
<CustomField>
    <fullName>Karteninhaber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Karteninhaber</label>
    <type>Checkbox</type>
</CustomField>