default/objects/Contact/fields/Kartenlimit__c.field-meta.xml
<CustomField>
    <fullName>Kartenlimit__c</fullName>
    <label>Kartenlimit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>