default/objects/Contact/fields/Lead_Quali_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quali_Status__c</fullName>
    <label>Lead Quali Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>