default/objects/Contact/fields/Lead_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type__c</fullName>
    <label>Lead Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>