default/objects/Contact/fields/Marketo_Sync__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sync to Marketo Marketing System</inlineHelpText>
    <label>Marketo Sync</label>
    <type>Checkbox</type>
</CustomField>