default/objects/Contact/fields/Merge_Notes__c.field-meta.xml
<CustomField>
    <fullName>Merge_Notes__c</fullName>
    <label>Merge Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>