default/objects/Contact/fields/MobilePhone_Status__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone_Status__c</fullName>
    <description>Status for the "MobilePhone" field</description>
    <label>Mobile Phone Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PhoneStatus</valueSetName>
    </valueSet>
</CustomField>