default/objects/Contact/fields/MobilePhone_StatusModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone_StatusModifiedDate__c</fullName>
    <description>Last Modified Date for MobilePhone_Status__c field</description>
    <label>Mobile Phone Status Modified Date</label>
    <type>DateTime</type>
</CustomField>