default/objects/Contact/fields/Mother_s_maiden_name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_maiden_name__c</fullName>
    <label>Mother's maiden name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>