default/objects/Contact/fields/Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Name_Formula__c</fullName>
    <formula>IF(ISPICKVAL( Salutation ,""), FirstName&amp;" "&amp; LastName,
            IF(ISPICKVAL(Salutation,"Herr"),"Mr. "&amp; FirstName&amp;" "&amp; LastName,
            IF(ISPICKVAL(Salutation,"Frau"),"Mrs. "&amp; FirstName&amp;" "&amp; LastName,
            IF(ISPICKVAL(Salutation,"Frau Dr."),"Dr. "&amp; FirstName&amp;" "&amp; LastName,
            IF(ISPICKVAL(Salutation,"Herr Dr."),"Dr. "&amp; FirstName&amp;" "&amp; LastName,
            IF(ISPICKVAL(Salutation,"Frau Prof."),"Prof. "&amp; FirstName&amp;" "&amp; LastName,
            IF(ISPICKVAL(Salutation,"Herr Prof."),"Prof. "&amp; FirstName&amp;" "&amp; LastName,
            TEXT(Salutation) + ' ' + FirstName + ' ' + LastName
            )))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>