default/objects/Contact/fields/Nationalitaet__c.field-meta.xml
<CustomField>
    <fullName>Nationalitaet__c</fullName>
    <label>Nationalität</label>
    <length>50</length>
    <type>Text</type>
</CustomField>