default/objects/Contact/fields/Nutzungsart__c.field-meta.xml
<CustomField>
    <fullName>Nutzungsart__c</fullName>
    <label>Nutzungsart</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Keine Einschränkungen</fullName>
            </value>
            <value>
                <fullName>Nutzung nur an Tankstellen</fullName>
            </value>
            <value>
                <fullName>Nutzung nur an Tankstellen und Werkstätten</fullName>
            </value>
            <value>
                <fullName>Reisekosten und Nutzung an Tankstellen und Werkstätten</fullName>
            </value>
            <value>
                <fullName>Bürobedarf, Reisekosten und Nutzung an Tankstellen und Werkstätten</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>