default/objects/Contact/fields/NVM_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>NVM_Call_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NVM Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>