default/objects/Contact/fields/NVM_Call_Logged__c.field-meta.xml
<CustomField>
    <fullName>NVM_Call_Logged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NVM Call Logged</label>
    <type>Checkbox</type>
</CustomField>