default/objects/Contact/fields/NVM_Country__c.field-meta.xml
<CustomField>
    <fullName>NVM_Country__c</fullName>
    <formula>Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NVM Country</label>
    <type>Text</type>
</CustomField>