default/objects/Contact/fields/Opportunity_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Scoring__c</fullName>
    <description>Scoring from the parent Opportunity</description>
    <label>Opportunity Scoring</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>